--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -21,6 +21,16 @@
       href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
