feat: new logo with icon

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -31,6 +31,8 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
